force-app/main/default/objects/Quiz_Result__c/Quiz_Result__c.object-meta.xml
<CustomObject>
    <label>Quiz_Result</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Quiz_Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz_Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>