force-app/main/default/objects/Quiz_Result__c/fields/JSON_Result__c.field-meta.xml
<CustomField>
    <fullName>JSON_Result__c</fullName>
    <label>JSON Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>