force-app/main/default/objects/Quiz_Result__c/fields/Quiz_User__c.field-meta.xml
<CustomField>
    <fullName>Quiz_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quiz_User</label>
    <referenceTo>Quiz_User__c</referenceTo>
    <relationshipLabel>Quiz_Results</relationshipLabel>
    <relationshipName>Quiz_Results</relationshipName>
    <type>Lookup</type>
</CustomField>