force-app/main/default/objects/Quiz_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Quiz_Session__c</columns>
    <columns>Quiz_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>